charts/basic-ingress.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: nginx 
  annotations: 
    cloud.google.com/load-balancer-type: "Internal" 
  labels: 
    app: echo
    spec: 
      type: LoadBalancer
      ports: 
        - port: 80 
          protocol: TCP
